--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "deploy:dev": "rimraf .build && sls deploy",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -52,10 +53,11 @@
     "plugin": "^0.3.3",
     "prettier": "^2.3.2",
     "prisma": "^3.10.0",
-    "serverless-dotenv-plugin": "^3.12.2",
+    "serverless": "^3.7.4",
     "serverless-offline": "^8.5.0",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
     "serverless-plugin-typescript": "^2.1.1",
+    "serverless-prune-plugin": "^2.0.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
