--- a/.github/workflows/anction.yml
+++ b/.github/workflows/anction.yml
@@ -23,7 +23,7 @@ jobs:
           node-version: '14.x'
 
       - name: Install Package.json
-        run: npm ci
+        run: npm i
 
       - name: serverless deploy
         uses: serverless/github-action@v3
