FIX: serverless setting

--- a/serverless.yaml
+++ b/serverless.yaml
@@ -21,8 +21,6 @@ functions:
           path: /{any+}
 
 package:
-  patterns:
+  exclude:
     - '!node_modules/.prisma/client/libquery_engine-*'
     - 'node_modules/.prisma/client/libquery_engine-rhel-*'
-    - '!node_modules/prisma/libquery_engine-*'
-    - '!node_modules/@prisma/engines/**'
