--- a/.github/workflows/anction.yml
+++ b/.github/workflows/anction.yml
@@ -3,12 +3,11 @@ name: Node.js DEPLOY
 on:
   push:
     branches:
+      - develop
+  pull_request:
+    types: [closed]
+    branches:
       - master
-#      - develop
-#  pull_request:
-#    types: [closed]
-#    branches:
-#      - master
 
 jobs:
   deploy:
@@ -32,7 +31,3 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          KAKAO_APP_ID: ${{ secrets.KAKAO_APP_ID }}
-          KAKAO_APP_SECRET: ${{ secrets.KAKAO_APP_SECRET }}
