--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/config": "^1.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
-    "@prisma/client": "^3.10.0",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.1.5",
+    "mongoose-delete": "^0.5.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -52,7 +54,6 @@
     "jest": "^27.2.5",
     "plugin": "^0.3.3",
     "prettier": "^2.3.2",
-    "prisma": "^3.10.0",
     "serverless": "^3.7.4",
     "serverless-offline": "^8.5.0",
     "serverless-plugin-optimize": "^4.2.1-rc.1",
@@ -62,9 +63,9 @@
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.3"
   },
   "jest": {
     "moduleFileExtensions": [
