--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
-    "@nestjs/config": "^1.2.0",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dayjs": "^1.11.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "mongoose-delete": "^0.5.4",
@@ -52,6 +54,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "mongodb-memory-server": "^8.5.2",
     "plugin": "^0.3.3",
     "prettier": "^2.3.2",
     "serverless": "^3.7.4",
@@ -64,7 +67,7 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.2.1",
-    "tsconfig-paths": "^3.10.1",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.4.3"
   },
   "jest": {
@@ -82,6 +85,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": ["../test/mongo-test.helper.ts"]
   }
 }
