--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.3.1",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -86,6 +87,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["../test/mongo-test.helper.ts"]
+    "setupFilesAfterEnv": [
+      "../test/mongo-test.helper.ts"
+    ]
   }
 }
